# modconfig

./: .bumpversion.cfg  Makefile  README.rst  modconfig.py  setup.cfg  setup.py  tests.py
.github/workflows/: release.yml  tests.yml
example/: defaults.py  production.py  tests.py
modconfig/: __init__.py
