[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE

[bumpversion]
commit = True
current_version = 0.0.0
files = modconfig.py
tag = True
tag_name = {new_version}
message = build(version): {current_version} -> {new_version}


[tool:pytest]
addopts = -xs
