[bumpversion]
commit = True
current_version = 0.11.0
files = modconfig/__init__.py
tag = True
tag_name = {new_version}
message = build(version): {current_version} -> {new_version}

[metadata]
name = modconfig
version = attr: modconfig.__version__
url = https://github.com/klen/modconfig
description = Simple hierarchic configuration manager for apps
long_description = file: README.rst
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = settings, configuration
project_urls = 
	Documentation = https://github.com/klen/modconfig
	Source code = https://github.com/klen/modconfig
	Issue tracker = https://github.com/klen/modconfig/issues
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
packages = modconfig
python_requires = >= 3.6

[options.package_data]
modconfig = py.typed

[options.extras_require]
tests = 
	pytest
	pytest-mypy

[tool:pytest]
addopts = -xsv --mypy

[pylama]
ignore = D203

[tox:tox]
envlist = py36,py37,py38,py39

[testenv]
deps = -e .[tests]
commands = 
	pytest tests.py
